--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -3,13 +3,13 @@
 #   Documentation: https://wowchemy.com/docs/guide/language/
 
 # Default language
-en:
+zh:
   languageCode: zh-Hans
   # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
   #contentDir: content/en en-us
 
 # Uncomment the lines below to configure your website in a second language.
-zh:
+en:
   languageCode: en-us
   contentDir: content/en
   title: Hao Xu
@@ -20,18 +20,15 @@ zh:
       - name: Home
         url: '#about'
         weight: 10
+      - name: Publication
+        url: '#publications'
+        weight: 20
       - name: Post
         url: '#posts'
-        weight: 20
+        weight: 30
       - name: Project
         url: '#projects'
-        weight: 30
-      - name: Talk
-        url: '#talks'
-        weight: 40
-      - name: Publication
-        url: '#featured'
-        weight: 50
+        weight: 40     
       - name: Contact
         url: '#contact'
         weight: 60
