--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -10,8 +10,8 @@ baseURL: 'https://www.haoxu.me' # Website URL
 ## LANGUAGE
 ############################
 
-defaultContentLanguage: en
-hasCJKLanguage: false
+defaultContentLanguage: zh
+hasCJKLanguage: true
 defaultContentLanguageInSubdir: false
 removePathAccents: true
 
